<!--
  ~ Copyright (c) 2018. Jeffrey Nyauke.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">The Eastern Watcher</string>
    <string name="app_name_title">The Eastern\nWatcher</string>
    <string name="app_intro">Welcome</string>
    <string name="action_settings">Settings</string>

    <!--web menu-->
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>

    <string name="title_post">Title</string>
    <string name="text_post">Text</string>
    <string name="author_post">Author</string>
    <string name="url_post">URL</string>
    <string name="type_post">Type</string>
    <string name="image_post">Image</string>
    <string name="button_send">Send</string>

    <!--Lorem Ipsum-->
    <string name="lorem_ipsum_title">Lorem Ipsum Dor Sammet Mondulat Bader Thor Man Tabil Laquim Tader Man Tudor Laquiaserm </string>
    <string name="lorem_ipsum_text">Lorem ipsum dor sammet mondulat bader thor man tabil laquim tader man tudor laquiaserm turdem dor minute teladere well der mundonert henr ken tammub biro ka welcomi hasera jefater tumeraset refida wllfare feola ferta sattad firafter henz mokeira.</string>
    <string name="lorem_ipsum_name">Jeffrey Nyauke</string>
    <string name="lorem_ipsum_time">10 minutes ago</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing in anonymously…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <string name="success">Success</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.1</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_new_notification_sound">New article notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="invitation_title">The Advent Telegraph</string>
    <string name="invitation_message">Hey! I\'m enjoying The Advent Telegraph. Try it with me</string>
    <string name="invitation_deep_link">/link</string>
    <string name="invitation_cta">Install</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.advent-telegraph.piestack.co.ke\",\n  }\n}]</string>
    <string name="action_support">Support</string>
    <string name="home">HOME</string>
    <string name="poems">POEMS</string>
    <string name="health">HEALTH</string>
    <string name="library">LIBRARY</string>
    <string name="music">MUSIC</string>
    <string name="video">VIDEO</string>
    <string name="more">More</string>
    <string name="bible">Bible</string>
    <string name="hymnal">Adventist Hymnal</string>
    <string name="quiz">Quiz</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="image">image</string>
    <string name="sample_title">TextView</string>
    <string name="sample_description">TextView</string>
    <string name="sample_verse">In the beginning God created the heaven and the earth</string>
    <string name="search_hint_bible">Search verses</string>
    <string name="search_hint_hymnal">Search hymns</string>
    <string name="action_chapter">GENESIS 1</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <array name="books">
        "Genesis" "50"
        "Exodus" "40"
        "Leviticus" "27"
        "Numbers" "36"
        "Deuteronomy" "34"
        "Joshua" "24"
        "Judges" "21"
        "Ruth" "4"
        "1 Samuel" "31"
        "2 Samuel" "24"
        "1 Kings" "22"
        "2 Kings" "25"
        "1 Chronicles" "29"
        "2 Chronicles" "36"
        "Ezra" "10"
        "Nehemiah" "13"
        "Esther" "10"
        "Job" "42"
        "Psalms" "150"
        "Proverbs" "31"
        "Ecclesiastes" "12"
        "Song of Solomon" "8"
        "Isaiah" "66"
        "Jeremiah" "52"
        "Lamentations" "5"
        "Ezekiel" "48"
        "Daniel" "12"
        "Hosea" "14"
        "Joel" "3"
        "Amos" "9"
        "Obadiah" "1"
        "Jonah" "4"
        "Micah" "7"
        "Nahum" "3"
        "Habakkuk" "3"
        "Zephaniah" "3"
        "Haggai" "2"
        "Zechariah" "14"
        "Malachi" "4"
        "Matthew" "28"
        "Mark" "16"
        "Luke" "24"
        "John" "21"
        "Acts" "28"
        "Romans" "16"
        "1 Corinthians" "16"
        "2 Corinthians" "13"
        "Galatians" "6"
        "Ephesians" "6"
        "Philippians" "4"
        "Colossians" "4"
        "1 Thessalonians" "5"
        "2 Thessalonians" "3"
        "1 Timothy" "6"
        "2 Timothy" "4"
        "Titus" "3"
        "Philemon" "1"
        "Hebrews" "13"
        "James" "5"
        "1 Peter" "5"
        "2 Peter" "3"
        "1 John" "5"
        "2 John" "1"
        "3 John" "1"
        "Jude" "1"
        "Revelation" "22"
    </array>
    <string name="title_hymnal">Adventist Hymnal</string>
    <string name="title_bible">Bible</string>
    <string name="no_saves">no saves</string>
    <string name="comments">Comments</string>
    <string name="search">Search</string>
    <string name="blank" />
    <string name="setting_up">Just a few seconds. We are setting up..</string>

</resources>
