<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piestack.adventelegraph.ui.PostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/title_post" />

            <EditText
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_post"
                android:layout_alignStart="@+id/title_post"
                android:layout_alignLeft="@+id/title_post"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/text_post" />

            <EditText
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text"
                android:layout_alignStart="@+id/text"
                android:layout_below="@+id/text"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/author_post" />

            <EditText
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/author"
                android:layout_alignStart="@+id/author"
                android:layout_below="@+id/author"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/image_post" />

            <EditText
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/image"
                android:layout_alignStart="@+id/image"
                android:layout_below="@+id/image"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/url_post" />

            <EditText
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/url"
                android:layout_alignStart="@+id/url"
                android:layout_below="@id/url"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="number"
                android:text="@string/type_post" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/type"
                android:layout_alignStart="@+id/type"
                android:layout_below="@+id/type"
                android:onClick="sendPost"
                android:text="@string/button_send" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
