<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Jeffrey Nyauke.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/windowBackground"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:maxLines="6"
        android:paddingLeft="@dimen/guideline_margin"
        android:paddingRight="@dimen/guideline_margin"
        android:text="@string/lorem_ipsum_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:maxLines="6"
        android:paddingLeft="@dimen/guideline_margin"
        android:paddingTop="@dimen/guideline_quarter"
        android:paddingRight="@dimen/guideline_margin"
        android:text="@string/lorem_ipsum_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text">


        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/share"
            android:layout_toLeftOf="@+id/share"
            android:paddingLeft="@dimen/guideline_margin"
            android:paddingTop="@dimen/guideline_margin"
            android:paddingRight="@dimen/guideline_margin"
            android:paddingBottom="@dimen/guideline_margin"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bookmark" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/guideline_half"
            android:paddingLeft="@dimen/guideline_half"
            android:paddingTop="@dimen/guideline_margin"
            android:paddingEnd="@dimen/guideline_margin"
            android:paddingRight="@dimen/guideline_margin"
            android:paddingBottom="@dimen/guideline_margin"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/share" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/guideline_margin"
            android:paddingLeft="@dimen/guideline_margin"
            android:text="@string/lorem_ipsum_time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    </RelativeLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingStart="@dimen/guideline_margin"
        android:paddingLeft="@dimen/guideline_margin"
        android:paddingTop="@dimen/guideline_margin"
        android:text="@string/lorem_ipsum_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />


</RelativeLayout>


