<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/guideline_margin"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/guideline_margin"
                android:paddingRight="@dimen/guideline_margin"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/genre"
                android:text="@string/lorem_ipsum_title"
                android:textStyle="normal"
                android:textSize="@dimen/text_size_title"
                android:maxLines="3"
                android:layout_toLeftOf="@id/image"
                android:textColor="@color/textColorPrimaryDark"
                android:ellipsize="end"/>

            <TextView
                android:layout_below="@+id/title"
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:maxLines="6"
                android:ellipsize="end"
                android:paddingLeft="@dimen/guideline_margin"
                android:paddingRight="@dimen/guideline_margin"
                android:paddingTop="@dimen/guideline_quarter"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/image"
                android:text="@string/lorem_ipsum_text"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/text"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/overflow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:scaleType="centerCrop"
                    android:paddingRight="@dimen/guideline_margin"
                    android:paddingTop="@dimen/guideline_space"
                    android:paddingBottom="@dimen/guideline_space"
                    android:paddingLeft="@dimen/guideline_half"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/timestamp"
                    android:text="@string/lorem_ipsum_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/guideline_margin"
                    android:paddingTop="@dimen/guideline_space"
                    android:paddingRight="@dimen/guideline_space"
                    android:paddingBottom="@dimen/guideline_space"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/text_size_small"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/image"
                android:layout_width="@dimen/image_post_author"
                android:adjustViewBounds="true"
                android:layout_height="@dimen/image_post_author"
                android:layout_marginRight="@dimen/guideline_margin"
                android:layout_marginLeft="@dimen/guideline_half"
                android:scaleType="centerCrop"
                android:layout_below="@+id/genre"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:text="@string/lorem_ipsum_name"
                android:textSize="@dimen/text_size_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/guideline_margin"
                android:paddingLeft="@dimen/guideline_margin"
                android:paddingRight="@dimen/guideline_margin"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:id="@+id/genre"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
